--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -34,7 +34,6 @@
     }
 
     .app-header-nav-link {
-        filter: var(--logo-filter);
         padding: 6px 10px 6px 12px;
     }
 
