--- a/src/assets/styles/cmps/_BoardSidebar.scss
+++ b/src/assets/styles/cmps/_BoardSidebar.scss
@@ -10,10 +10,16 @@
 		padding: 0 12px;
 		overflow: hidden;
 		text-overflow: ellipsis;
+
+		&.active {
+			background-color: var(--clr-background-active-1);
+		}
 	}
 
 	&-boards-title {
-		padding: 0 6px 0 12px;
+		font-weight: 600;
+		line-height: 24px;
+		padding: 4px 6px 4px 12px;
 	}
 
 	&-boards-list {
